--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pydrive2==2.1.19
 oauthlib==3.2.2
 openai==1.20.0
 python-dotenv==1.0.1
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.126.0
